# DeepCNNClassifier_Project

./: .gitignore  LICENSE  README.md  dvc.yaml  init_setup.sh  params.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py
configs/: config.yaml
prediction_service/: DockerFile  app.py
research/: sg1.ipynb  trails.ipynb
src/deepClassifier/: __init__.py
src/deepClassifier/components/: data_ingestion.py  prepare_base_model.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/entity/: config_entity.py
src/deepClassifier/pipline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py
tests/unit/: test_utils.py
