[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971   #check the type error or not
    flake8>=5.0.4  # check the extra space 
    tox>=3.25.1    # test the application
    black>=22.8.0  # formating the structure

[options.package_data]
deepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py
